# fluent-flow

./: LICENSE  README.md  pyproject.toml
config/: config.yml
research/: llm.ipynb  trials.ipynb
src/fluent_flow/: __init__.py  agent_test.py  conversation_cli.py  run_streamlit.py  streamlit_app.py
src/fluent_flow/agent/: chains.py  llm.py  prompts.py  tutor.py  types.py
src/fluent_flow/config/: configuration.py
src/fluent_flow/core/: audio.py  audio_recorder.py  constants.py  language_model.py  speech_to_text.py  text_to_speech.py
src/fluent_flow/services/: openai_service.py
src/fluent_flow/streamlit/: app.py
src/fluent_flow/utils/: common.py
